--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
   - "3.2"
   - "3.3"
 
-install "pip install -r requirements.txt --use-mirrors"
+install: "pip install -r requirements.txt --use-mirrors"
 
 script: python -m unittest discover
